[package]
name = "docli"
version = "0.1.0"
authors = ["Kevin K <kbknapp@gmail.com>"]
description = "A command line utility to managing DigitalOcean infrastructure"
license = "MIT"
repository = "https://github.com/kbknapp/docli-rs.git"
documentation = "http://kbknapp.github.io/docli-rs"
readme = "README.md"
keywords = ["do", "cli", "digitalocean", "digital", "ocean"]
homepage = "https://kbknapp.github.io/docli-rs"
exclude = ["pkg/*"]

[dependencies]
clap = "~1.4"
doapi = "~0.1.1"
ansi_term = {version = "0.6", optional = true}
clippy = {version = "0.0", optional = true}

[features]
default = ["color"]
color = ["ansi_term"]
lints = ["nightly", "clippy"]
nightly = []
# for building with nightly and unstable features
unstable=["lints"]


